--- a/Mini_ProJect_complete.html
+++ b/Mini_ProJect_complete.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6.실습 2.box container</title>
-    <link rel="stylesheet" href="./6.실습 2.box container.css">
+    <link rel="stylesheet" href="./Mini_ProJect_complete.css">
 </head>
 <body>
     <!-- box 실습 -->
     <div class="container">
         <nav>Navigation Bar</nav>
             <div class="box-container">
-                박스들...
             <div class="box">박스1</div>
             <div class="box">박스1</div>
             <div class="box">박스1</div>
